# acpi-backlight-notify

./: CMakeLists.txt  README.md
man/: backlight-notify.1
src/: CMakeLists.txt  main.c
